gke/manifests/proxy/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: gke-proxy-ingress
spec:
  podSelector:
    matchLabels:
      app: gke-access-proxy
  policyTypes: [Ingress]
  ingress:
    - from:
        - ipBlock:
            cidr: 35.191.0.0/16
        - ipBlock:
            cidr: 130.211.0.0/22
      ports:
        - protocol: TCP
          port: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: gke-backend-ingress
spec:
  podSelector:
    matchLabels:
      app: workspaces-backend
  policyTypes: [Ingress]
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: gke-access-proxy
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: gke-frontend-ingress
spec:
  podSelector:
    matchLabels:
      app: workspaces-frontend
  policyTypes: [Ingress]
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: gke-access-proxy
